# CandyMP

./: CMakeLists.txt
data/: dump_board.txt
src/: board.cpp  board.h
src/private/sdl_wrapper/: sprites.h
src/private/sdl_wrapper/NFont/: NFont.h  SDL_FontCache.h
test/: test.cpp  test.h
